# lv_port_pc_vscode

./: .gitignore  CMakeLists.txt  Makefile  lv_conf.h  lv_drv_conf.h  simulator.code-workspace
include/: myhead.h
main/src/: main.c
src/: main.c
